--- a/source/CustomControls/ComboBoxList.xaml
+++ b/source/CustomControls/ComboBoxList.xaml
@@ -80,7 +80,8 @@
         <Border BorderThickness="{DynamicResource ControlBorderThickness}"
                 CornerRadius="{DynamicResource ControlCornerRadius}"
                 Style="{DynamicResource HighlightBorder}"
-                Background="{TemplateBinding Background}"
+                Background="{DynamicResource ComboBoxListBackgroundBrush}"
+                Cursor="Hand"
                 x:Name="Root">
             <Grid>
                 <DockPanel>
@@ -153,6 +154,14 @@
                 </Popup>
             </Grid>
         </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{DynamicResource ComboboxIsMouseOverBackgroundBrush}" TargetName="Root" />
+            </Trigger>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" />
+            </Trigger>
+        </ControlTemplate.Triggers>
     </ControlTemplate>
     
     <Style x:Key="ComboBoxListItemStyle" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource {x:Type CheckBox}}">
